some overflow issues solved

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
 	min-height: 100vh;
 	background: #03000f;
 	color: #fff;
-	overflow: hidden;
 }
 
 #home-btn,
@@ -161,7 +160,7 @@ input {
 }
 
 #canvas {
-	transform: translate(0, 120%);
+	transform: translate(0, -120%);
 	position: absolute;
 	left: 0;
 	z-index: 5;
@@ -195,4 +194,16 @@ input {
 	transform: translate(0, 0);
 	opacity: 100%;
 	pointer-events: all;
+}
+
+body,
+html {
+	/* IE and Legacy Edge */
+	-ms-overflow-style: none;
+	/* Firefox */
+	scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+	display: none;
 }
